tests/idris2/basic031/expected
1/1: Building erased (erased.idr)
Error: While processing left hand side of nameOf. Can't match on Bool (Erased argument).

erased:7:17--7:21
 3 |   MyJust : a -> MyMaybe a
 4 | 
 5 | -- Should fail since type argument is deleted
 6 | nameOf : Type -> String
 7 | nameOf (MyMaybe Bool) = "MyMaybe Bool"
                     ^^^^

Error: While processing left hand side of nameOf. Can't match on Int (Erased argument).

erased:8:17--8:20
 4 | 
 5 | -- Should fail since type argument is deleted
 6 | nameOf : Type -> String
 7 | nameOf (MyMaybe Bool) = "MyMaybe Bool"
 8 | nameOf (MyMaybe Int) = "MyMaybe Int"
                     ^^^

